cmake_minimum_required(VERSION 3.16)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode main.cpp)
add_executable(206 DataStructure/206.cpp)
add_executable(21 DataStructure/21.cpp)
add_executable(Tree DataStructure/Tree.cpp)
add_executable(s_q DataStructure/stack_queue.cpp)
add_executable(hash DataStructure/hash.cpp)
add_executable(string DataStructure/String.cpp)
add_executable(array DataStructure/array.cpp)